fix(Timepicker): modified the style - time column a bit shifted to the right side.

--- a/src/styles/timepicker.scss
+++ b/src/styles/timepicker.scss
@@ -26,8 +26,8 @@
         max-width: 6%;
       }
       > div.col-3 {
-        flex: 0 0 31%;
-        max-width: 31%;
+        flex: 0 0 42%;
+        max-width: 42%;
       }
       input:disabled {
         color: #999;
